--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome - callmeant.com</title>
+    <title>Hello, I'm Antenh - callmeant.com</title>
+    <meta name="description" content="Experienced Full Stack Web developer with 11+ years of experience.">
+    <meta name="robots" content="noindex, nofollow" />
   </head>
   <body class="bg-white dark:bg-gray-800 dark:text-white">
     <div id="app"></div>
