--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Experienced Full Stack Web developer with 11+ years of experience.">
     <meta name="robots" content="noindex, nofollow" />
   </head>
-  <body class="bg-white dark:bg-gray-800 dark:text-white">
+  <body class="bg-gray-200 dark:bg-gray-800 dark:text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
